Cleaning up deprecated functions
* Need to do `(new URI(...)).toURL()` now instead of just `new URL(...)`, which throws a different exception. Eh.
* apache IOUtils moved packages
* testcontainers Postgresql containers moved packages